# peoples-court

./: README.md
agent/: README.md
agent/cdp-langchain-chatbot/: .env.local  README.md  chatbot.py  my_tools.py  pyproject.toml
agent/cdp-langchain-chatbot/courtroom/: constants.py  get_personas.py  register.py  register_argument.py  register_persona.py
evm/: .gitignore  README.md  hardhat.config.js  package.json
evm/contracts/: PeoplesCourtDAO.sol
evm/scripts/: lookup-party.js
evm/test/: PeoplesCourtDAO.test.js
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  theme.json
frontend/client/src/: App.tsx
frontend/client/src/components/: CaseCard.tsx  CaseDetail.tsx  CaseList.tsx  Header.tsx  Logo.tsx  VotingInterface.tsx  WalletConnect.tsx
frontend/client/src/lib/: PeoplesCourtDAO.json  contract.ts
frontend/client/src/pages/: Home.tsx  home.tsx
webservices/: README.md  app.py  package.json  pnpm-lock.yaml  requirements.txt  serverless.yml
